Remove tryout flow and make platform optional
