# docs/swagger.json
@@ -226,13 +226,16 @@
                 "operationId": "BindInit",
                 "parameters": [
                     {
-                        "description": "query params",
-                        "name": "initReq",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/bindinit.InitReq"
-                        }
+                        "type": "string",
+                        "description": "client uuid",
+                        "name": "clientUuid",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "client version",
+                        "name": "clientVersion",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -291,7 +294,7 @@
                                     "type": "object",
                                     "properties": {
                                         "results": {
-                                            "$ref": "#/definitions/config.GetConfigRsp"
+                                            "$ref": "#/definitions/agent_biz_web_handler_bind_internet_service_config.GetConfigRsp"
                                         }
                                     }
                                 }
@@ -320,7 +323,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/config.ConfigReq"
+                            "$ref": "#/definitions/agent_biz_web_handler_bind_internet_service_config.ConfigReq"
                         }
                     }
                 ],
@@ -336,7 +339,7 @@
                                     "type": "object",
                                     "properties": {
                                         "results": {
-                                            "$ref": "#/definitions/config.ConfigRsp"
+                                            "$ref": "#/definitions/agent_biz_web_handler_bind_internet_service_config.ConfigRsp"
                                         }
                                     }
                                 }
@@ -1128,29 +1131,6 @@
                 }
             }
         },
-        "/agent/v1/api/pair/tryout/code": {
-            "post": {
-                "consumes": [
-                    "text/plain"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "TryOut"
-                ],
-                "summary": "verify trial code [for web client LAN]",
-                "operationId": "TryOutCode",
-                "responses": {
-                    "200": {
-                        "description": "code=AG-200 success;",
-                        "schema": {
-                            "$ref": "#/definitions/dto.BaseRspStr"
-                        }
-                    }
-                }
-            }
-        },
         "/agent/v1/api/pairing": {
             "post": {
                 "consumes": [
@@ -1703,13 +1683,83 @@
         }
     },
     "definitions": {
-        "bindinit.InitReq": {
+        "agent_biz_model_upgrade.VersionDownInfo": {
             "type": "object",
             "properties": {
-                "clientUuid": {
+                "downloaded": {
+                    "type": "boolean"
+                },
+                "pkgPath": {
                     "type": "string"
                 },
-                "clientVersion": {
+                "updateTime": {
+                    "type": "string"
+                },
+                "versionId": {
+                    "type": "string"
+                }
+            }
+        },
+        "agent_biz_web_handler_bind_internet_service_config.ConfigReq": {
+            "type": "object",
+            "properties": {
+                "clientUUID": {
+                    "type": "string"
+                },
+                "enableInternetAccess": {
+                    "type": "boolean"
+                },
+                "platformApiBase": {
+                    "description": "Platform api url setting, e.g. \"https://ao.space\"`",
+                    "type": "string"
+                }
+            }
+        },
+        "agent_biz_web_handler_bind_internet_service_config.ConfigRsp": {
+            "type": "object",
+            "properties": {
+                "connectedNetwork": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/pair.Network"
+                    }
+                },
+                "enableInternetAccess": {
+                    "type": "boolean"
+                },
+                "enableLAN": {
+                    "type": "boolean"
+                },
+                "enableP2P": {
+                    "type": "boolean"
+                },
+                "userDomain": {
+                    "type": "string"
+                }
+            }
+        },
+        "agent_biz_web_handler_bind_internet_service_config.GetConfigRsp": {
+            "type": "object",
+            "properties": {
+                "connectedNetwork": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/pair.Network"
+                    }
+                },
+                "enableInternetAccess": {
+                    "type": "boolean"
+                },
+                "enableLAN": {
+                    "type": "boolean"
+                },
+                "enableP2P": {
+                    "type": "boolean"
+                },
+                "platformApiBase": {
+                    "type": "string"
+                },
+                "userDomain": {
                     "type": "string"
                 }
             }
@@ -1733,70 +1783,6 @@
             "type": "object",
             "properties": {
                 "cert": {
-                    "type": "string"
-                }
-            }
-        },
-        "config.ConfigReq": {
-            "type": "object",
-            "properties": {
-                "clientUUID": {
-                    "type": "string"
-                },
-                "enableInternetAccess": {
-                    "type": "boolean"
-                },
-                "platformApiBase": {
-                    "description": "Platform api url setting, e.g. \"https://ao.space\"`",
-                    "type": "string"
-                }
-            }
-        },
-        "config.ConfigRsp": {
-            "type": "object",
-            "properties": {
-                "connectedNetwork": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/pair.Network"
-                    }
-                },
-                "enableInternetAccess": {
-                    "type": "boolean"
-                },
-                "enableLAN": {
-                    "type": "boolean"
-                },
-                "enableP2P": {
-                    "type": "boolean"
-                },
-                "userDomain": {
-                    "type": "string"
-                }
-            }
-        },
-        "config.GetConfigRsp": {
-            "type": "object",
-            "properties": {
-                "connectedNetwork": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/pair.Network"
-                    }
-                },
-                "enableInternetAccess": {
-                    "type": "boolean"
-                },
-                "enableLAN": {
-                    "type": "boolean"
-                },
-                "enableP2P": {
-                    "type": "boolean"
-                },
-                "platformApiBase": {
-                    "type": "string"
-                },
-                "userDomain": {
                     "type": "string"
                 }
             }
@@ -1880,7 +1866,11 @@
             "properties": {
                 "deviceAbility": {
                     "description": "设备能力模型",
-                    "$ref": "#/definitions/device_ability.DeviceAbility"
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/device_ability.DeviceAbility"
+                        }
+                    ]
                 },
                 "deviceLogoUrl": {
                     "description": "设备图片链接",
@@ -2084,7 +2074,8 @@
             "type": "object",
             "properties": {
                 "created": {
-                    "type": "integer"
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "hostConfig": {
                     "type": "object",
@@ -2386,7 +2377,11 @@
                 },
                 "deviceAbility": {
                     "description": "设备能力模型",
-                    "$ref": "#/definitions/device_ability.DeviceAbility"
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/device_ability.DeviceAbility"
+                        }
+                    ]
                 },
                 "deviceLogoUrl": {
                     "description": "设备图片链接",
@@ -2721,10 +2716,6 @@
                     "description": "状态",
                     "type": "string"
                 },
-                "tryoutCodeVerified": {
-                    "description": "试用码是否验证通过(仅在 PC 试用场景下使用).",
-                    "type": "boolean"
-                },
                 "version": {
                     "description": "客户端版本",
                     "type": "string"
@@ -2811,14 +2802,18 @@
             "type": "object",
             "properties": {
                 "KernelImg": {
-                    "$ref": "#/definitions/upgrade.VersionDownInfo"
+                    "$ref": "#/definitions/agent_biz_model_upgrade.VersionDownInfo"
                 },
                 "cFile": {
                     "description": "docker-compose.yml",
-                    "$ref": "#/definitions/upgrade.VersionDownInfo"
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/agent_biz_model_upgrade.VersionDownInfo"
+                        }
+                    ]
                 },
                 "containerImg": {
-                    "$ref": "#/definitions/upgrade.VersionDownInfo"
+                    "$ref": "#/definitions/agent_biz_model_upgrade.VersionDownInfo"
                 },
                 "doneDownTime": {
                     "type": "string"
@@ -2838,7 +2833,7 @@
                     "type": "boolean"
                 },
                 "rpmPkg": {
-                    "$ref": "#/definitions/upgrade.VersionDownInfo"
+                    "$ref": "#/definitions/agent_biz_model_upgrade.VersionDownInfo"
                 },
                 "startDownTime": {
                     "type": "string"
@@ -2863,23 +2858,6 @@
                 },
                 "autoInstall": {
                     "type": "boolean"
-                }
-            }
-        },
-        "upgrade.VersionDownInfo": {
-            "type": "object",
-            "properties": {
-                "downloaded": {
-                    "type": "boolean"
-                },
-                "pkgPath": {
-                    "type": "string"
-                },
-                "updateTime": {
-                    "type": "string"
-                },
-                "versionId": {
-                    "type": "string"
                 }
             }
         }
